feat : Cookie 삭제 하고 redirect 하는 방식으로 변경 S11P21A401-585